--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.opendma</groupId>
     <artifactId>opendma-api</artifactId>
-    <version>0.7.0</version>
+    <version>0.8.0-SNAPSHOT</version>
     <name>OpenDMA API</name>
     <description>Java API for OpenDMA</description>
     <url>https://opendma.org</url>
@@ -21,7 +21,7 @@
         <url>https://github.com/OpenDMA/opendma-java-api</url>
         <connection>scm:git:git://github.com/OpenDMA/opendma-java-api.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/OpenDMA/opendma-java-api.git</developerConnection>
-        <tag>opendma-api-0.7.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
